fix some tests broken by tfgm gtfs changes, including removal of feedinfo.txt. Some route based test still failing